@@ -444,7 +444,7 @@ module Sequel
     # for all columns unless the :allow_nil option is given.
     def generator_add_constraint_from_validation(generator, val, cons)
       if val[:allow_nil]
-        nil_cons = Sequel.expr(val[:columns].map{|c| [c, nil]})
+        nil_cons = Sequel[val[:columns].map{|c| [c, nil]}]
         cons = Sequel.|(nil_cons, cons) if cons
       else
         nil_cons = Sequel.negate(val[:columns].map{|c| [c, nil]})
