@@ -17,6 +17,6 @@
 class Object
   # Return the object wrapper in an appropriate Sequel expression object.
   def sql_expr
-    Sequel.expr(self)
+    Sequel[self]
   end
 end
